@@ -152,3 +152,7 @@ mob_ghostring_fix: yes
 // 1 - 100 - percentage of magic damage reduced only during pvp (or gvg)
 gtb_pvp_only: no
 
+// Adjustment for the natural rate of resistance from status changes.
+// If 50, status defense is halved, and you need twice as much stats to block
+// poison/silence/etc (eg: 200 vit to block poison/stun)
+status_def_rate: 100
